--- a/App/healtha/android/local.properties
+++ b/App/healtha/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\esraa\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\esraa\\flutter
+sdk.dir=C:\\Users\\sama\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Src\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
